--- a/index2.css
+++ b/index2.css
@@ -586,3 +586,104 @@ footer .container a{
         font-size: 0.9em;
     }
 }
+
+
+.form-section {
+    max-width: 800px;
+    margin: 50px auto;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0px 10px 67px 8px #b1b1f485;
+}
+
+h2 {
+    text-align: center;
+    color: #333;
+    font-size: 28px;
+    margin-bottom: 20px;
+}
+
+.form-group {
+    margin-bottom: 15px;
+}
+
+.form-group label {
+    display: block;
+    font-size: 16px;
+    color: #333;
+    margin-bottom: 8px;
+}
+
+.form-group input[type="text"],
+.form-group select,
+.form-group textarea {
+    width: 100%;
+    padding: 10px;
+    font-size: 14px;
+    border-radius: 10px;
+    border: solid 1px #4F9CF9;
+    margin-top: 5px;
+    box-sizing: border-box;
+}
+
+.form-group input[type="text"],
+.form-group textarea {
+    height: 50px;
+}
+
+textarea {
+    resize: none;
+    min-height: 100px;
+}
+
+.btn {
+    background-color: #4F9CF9;
+    color: white;
+    padding: 15px 20px;
+    border-radius: 10px;
+    cursor: pointer;
+    display: inline-block;
+    width: 100%;
+    margin-top: 20px;
+    font-size: 16px;
+    transition: background-color 0.1s ease;
+    text-align: center;
+}
+
+.btn:hover {
+    background-color: #3580db;
+}
+
+input[type="radio"],
+input[type="checkbox"] {
+    margin-right: 10px;
+    margin-top: 20px;
+    width: 200%;
+    padding: 10px;
+    font-size: 14px;
+    border-radius: 10px;
+    border: solid 1px #4F9CF9;
+    margin-top: 5px;
+    box-sizing: border-box;
+}
+
+@media (max-width: 768px) {
+    .form-section {
+        padding: 15px;
+        margin: 20px;
+    }
+
+    h2 {
+        font-size: 22px;
+    }
+
+    .form-group input[type="text"],
+    .form-group textarea {
+        height: auto;
+    }
+
+    .btn {
+        font-size: 14px;
+    }
+}
